syntax = "proto3";

package tags;

service Tags {
	// Add a tag to a parent
	rpc Add(AddRequest) returns (AddResponse) {}
	// Remove a tag from a parent
	rpc Remove(RemoveRequest) returns (RemoveResponse) {}
	// List tags by
	rpc List(ListRequest) returns (ListResponse) {}
	// Change properties of a tag, currently only the title and description
	rpc Update(UpdateRequest) returns (UpdateResponse){}
}

message Tag {
	// Type is useful for namespacing and listing across parents,
	// ie. list tags for posts, customers etc.
	string type = 1;
	string slug = 2;
	string title = 3;
	string description = 4;
	int64 count = 5;
}

message AddRequest {
	string parentID = 1;
	string type = 2;
	string title = 3;
}

message AddResponse{}

message RemoveRequest {
	string parentID = 1;
	string type = 2;
	string title = 3;
}

message RemoveResponse{}

message UpdateRequest {
	string type = 1;
	string title = 2;
	string description = 3;
}

message UpdateResponse{}

// ListRequest: list either by parent id or type.
// Optionally filter by min or max count.
message ListRequest{
	string parentID = 1;
	string type = 2;
	int64 minCount = 3;
	int64 maxCount = 4;
}

message ListResponse{
	repeated Tag tags = 1;
}

